--- a/Sindicato.WebSite/Content/extjs42.css
+++ b/Sindicato.WebSite/Content/extjs42.css
@@ -609,3 +609,15 @@
     z-index: -1;
     
 }
+
+.labelRecomendacion
+{
+    /*color: blue;*/
+    font-weight: bold;
+    font-style : italic;
+    text-align: center;
+    float: left;
+    margin-right: 10px;
+    font-size:12px;
+}
+
