manager de los cierres

--- a/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
+++ b/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
@@ -1025,3 +1025,5 @@
 .application-settings-icon { background-image: url(Iconos48/application-settings-icon.png) !important;}
 .Public-Documents-icon { background-image: url(Iconos48/Public-Documents-icon.png) !important;}
 .car-icon { background-image: url(Iconos48/car-icon.png) !important;}
+.Cash-register-icon { background-image: url(Iconos48/Cash-register-icon.png) !important;}
+.Calendar-icon { background-image: url(Iconos48/Calendar-icon.png) !important;}
