--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
@@ -6,13 +6,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.5475cm</Width>
+              <Width>1.47715cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>5.22521cm</Width>
+              <Width>5.15486cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>2.42965cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -321,10 +321,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>2.75787cm</Top>
-        <Left>1.18745cm</Left>
+        <Top>2.68732cm</Top>
+        <Left>0.63055cm</Left>
         <Height>1.8cm</Height>
-        <Width>9.27271cm</Width>
+        <Width>9.06166cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -350,8 +350,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox10</rd:DefaultName>
-        <Top>4.98037cm</Top>
-        <Left>1.18745cm</Left>
+        <Top>4.90982cm</Top>
+        <Left>0.63055cm</Left>
         <Height>0.6cm</Height>
         <Width>0.96542cm</Width>
         <ZIndex>1</ZIndex>
@@ -384,10 +384,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox11</rd:DefaultName>
-        <Top>4.98037cm</Top>
-        <Left>2.22342cm</Left>
+        <Top>4.90982cm</Top>
+        <Left>1.66652cm</Left>
         <Height>0.6cm</Height>
-        <Width>8.23674cm</Width>
+        <Width>8.02569cm</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
@@ -417,8 +417,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.11125cm</Top>
-        <Left>1.18745cm</Left>
+        <Top>1.0407cm</Top>
+        <Left>0.63055cm</Left>
         <Height>0.6cm</Height>
         <Width>2.1825cm</Width>
         <ZIndex>3</ZIndex>
@@ -450,8 +450,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.71125cm</Top>
-        <Left>1.18745cm</Left>
+        <Top>1.6407cm</Top>
+        <Left>0.63055cm</Left>
         <Height>0.6cm</Height>
         <Width>1.25646cm</Width>
         <ZIndex>4</ZIndex>
@@ -483,8 +483,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.11125cm</Top>
-        <Left>5.84539cm</Left>
+        <Top>1.0407cm</Top>
+        <Left>5.28849cm</Left>
         <Height>0.6cm</Height>
         <Width>1.12416cm</Width>
         <ZIndex>5</ZIndex>
@@ -516,8 +516,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.71125cm</Top>
-        <Left>4.15206cm</Left>
+        <Top>1.6407cm</Top>
+        <Left>3.59516cm</Left>
         <Height>0.6cm</Height>
         <Width>1.15063cm</Width>
         <ZIndex>6</ZIndex>
@@ -549,8 +549,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.11125cm</Top>
-        <Left>3.37185cm</Left>
+        <Top>1.0407cm</Top>
+        <Left>2.81495cm</Left>
         <Height>0.6cm</Height>
         <Width>2.36771cm</Width>
         <ZIndex>7</ZIndex>
@@ -571,7 +571,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!ID_REGULACION.Value, "DataSet1")</Value>
+                <Value>=First(Fields!MOVIL.Value, "DataSet1")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>8pt</FontSize>
@@ -582,8 +582,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.71125cm</Top>
-        <Left>2.44391cm</Left>
+        <Top>1.6407cm</Top>
+        <Left>1.88701cm</Left>
         <Height>0.6cm</Height>
         <Width>1.70815cm</Width>
         <ZIndex>8</ZIndex>
@@ -604,7 +604,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!ID_REGULACION.Value, "DataSet1")</Value>
+                <Value>=First(Fields!SOCIO.Value, "DataSet1")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>8pt</FontSize>
@@ -615,10 +615,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.71125cm</Top>
-        <Left>5.44379cm</Left>
+        <Top>1.6407cm</Top>
+        <Left>4.81635cm</Left>
         <Height>0.6cm</Height>
-        <Width>5.38396cm</Width>
+        <Width>4.87587cm</Width>
         <ZIndex>9</ZIndex>
         <Style>
           <Border>
@@ -637,10 +637,11 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!SOCIO.Value, "DataSet1")</Value>
+                <Value>=First(Fields!FECHA_COMPRA.Value, "DataSet1")</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>8pt</FontSize>
+                  <Format>d</Format>
                 </Style>
               </TextRun>
             </TextRuns>
@@ -648,10 +649,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox14</rd:DefaultName>
-        <Top>1.11125cm</Top>
-        <Left>7.14594cm</Left>
+        <Top>1.0407cm</Top>
+        <Left>6.58904cm</Left>
         <Height>0.6cm</Height>
-        <Width>3.68182cm</Width>
+        <Width>3.10318cm</Width>
         <ZIndex>10</ZIndex>
         <Style>
           <Border>
@@ -683,8 +684,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox12</rd:DefaultName>
-        <Top>0.10583cm</Top>
-        <Left>1.18745cm</Left>
+        <Top>0.03528cm</Top>
+        <Left>0.63055cm</Left>
         <Height>0.6cm</Height>
         <Width>9.06167cm</Width>
         <ZIndex>11</ZIndex>
@@ -729,8 +730,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox12</rd:DefaultName>
-          <Top>0.3175cm</Top>
-          <Left>1.18745cm</Left>
+          <Top>0.3846cm</Top>
+          <Left>0.63054cm</Left>
           <Height>0.6cm</Height>
           <Width>9.06167cm</Width>
           <Style>
@@ -761,8 +762,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox13</rd:DefaultName>
-          <Top>1.09389cm</Top>
-          <Left>5.28849cm</Left>
+          <Top>1.16099cm</Top>
+          <Left>4.73158cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.96062cm</Width>
           <ZIndex>1</ZIndex>
